@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd March 11, 2014
+.Dd August 15, 2014
 .Dt KYUA-ATF-INTERFACE 7
 .Os
 .Sh NAME
@@ -291,10 +291,20 @@ The
 .Va LC_NUMERIC
 and
 .Va LC_TIME
-variables are unset.  The
+variables are unset.
+.Pp
+The
 .Va TZ
 variable is set to
 .Sq UTC .
+.Pp
+The
+.Va TMPDIR
+variable is set to the absolute path of the work directory.  This is to
+prevent the test from mistakenly using a temporary directory outside of
+the automatically-managed work directory, should the test use the
+.Xr mktemp 3
+familiy of functions.
 .It Process limits
 The maximum soft core size limit is raised to its corresponding hard limit.
 This is a simple, best-effort attempt at allowing test cases to dump core
